Converted the project to use Maven.
* The project now uses Maven for dependency and build management.
* Apache Commons Codec is now used for Base64 encoding.
* The ```HttpURLConnection``` is not disconnected immediately so the ```InputStream``` can be read.
* An initial accessor was added to the ```Product``` class.
* An example test was added for the ```Resource``` class.