@@ -5,18 +5,12 @@ import java.io.OutputStreamWriter;
 import java.net.HttpURLConnection;
 import java.net.URL;
 
-//import sun.misc.BASE64Encoder;
-//import javax.mail.internet.MimeUtility;
-
-import com.bigcommerce.utils.Base64;
-
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
-import java.io.IOException;
-
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
+
+import org.apache.commons.codec.binary.Base64;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 
@@ -27,7 +21,9 @@ public class Connection
     String username;
     String password;
     String storeUrl;
-    String basePrefix;
+    
+    private InputStream responseStream;
+    private HttpURLConnection transport;
 
     public Connection(String storeurl, String username, String apikey)
     {
@@ -42,17 +38,8 @@ public class Connection
     private String getBasicAuthHeader()
     {
         String token = this.username + ":" + this.password;
-        //BASE64Encoder base64 = new sun.misc.BASE64Encoder();
-        //String encodedToken = base64.encode(token.getBytes());
-
-        //ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        //OutputStream encodedToken = MimeUtility.encode(baos, "base64");
-        //encodedToken.write(b);
-        //encodedToken.close();
-
-        String encodedToken = Base64.encodeString(token);
-
-        return "Basic " + encodedToken;
+		byte[] encodedToken = Base64.encodeBase64(token.getBytes()); 
+        return "Basic " + new String(encodedToken);
     }
 
     /**
@@ -60,23 +47,21 @@ public class Connection
      */
     private HttpURLConnection createTransport(String path, String verb) throws java.io.IOException
     {
-        URL url = new URL(this.storeUrl + this.basePrefix + path);
+        URL url = new URL(this.storeUrl + path);
         HttpURLConnection transport = (HttpURLConnection) url.openConnection();
         transport.setRequestMethod(verb);
         transport.setRequestProperty("Authorization", this.getBasicAuthHeader());
-        //transport.setRequestProperty("Content-type", "application/xml");
-        //transport.setRequestProperty("Accept", "application/xml");
         return transport;
     }
-
-    private InputStream responseStream;
 
     /**
      * Make an HTTP GET request to the given endpoint.
      */
     public Connection get(String path)
     {
-    	HttpURLConnection transport = null;
+		if (transport != null) {
+            transport.disconnect();
+        }
 
 		try {
 
@@ -87,15 +72,20 @@ public class Connection
 
 			System.out.print(e.toString());
 
-		} finally {
-
-			if (transport != null) {
-	            transport.disconnect();
-	        }
-
 		}
 
 		return this;
+    }
+    
+    private void closeExistingConnection() {
+		if (transport != null) {
+            transport.disconnect();
+            transport = null;
+        }
+    }
+    
+    public void close() {
+    	closeExistingConnection();
     }
 
     /**
@@ -103,13 +93,13 @@ public class Connection
      */
     public boolean post(String path, String data)
     {
-        HttpURLConnection transport = null;
+    	
+    	closeExistingConnection();
 
         try {
-
             transport = this.createTransport(path, "POST");
-
 	        transport.setDoOutput(true);
+	        
             OutputStreamWriter post = new OutputStreamWriter(transport.getOutputStream());
             post.write(data);
             post.flush();
@@ -119,12 +109,6 @@ public class Connection
 
         } catch(Exception e) {
             System.out.print(e.toString());
-
-        } finally {
-
-            if (transport != null) {
-	            transport.disconnect();
-	        }
 
         }
 
@@ -136,22 +120,14 @@ public class Connection
      */
     public boolean put(String path, String data)
     {
-        HttpURLConnection transport = null;
+    	closeExistingConnection();
 
         try {
-
             transport = this.createTransport(path, "PUT");
-
 	        this.responseStream = transport.getInputStream();
-
+	        return true;
         } catch(Exception e) {
             System.out.print(e.toString());
-
-        } finally {
-
-            if (transport != null) {
-	            transport.disconnect();
-	        }
 
         }
 
@@ -163,26 +139,13 @@ public class Connection
      */
     public boolean delete(String path)
     {
-        HttpURLConnection transport = null;
+    	closeExistingConnection();
 
         try {
-
             transport = this.createTransport(path, "DELETE");
-
-	        //String responseHeader = connection.getHeaderField(0);
-            //String[] headerArray = responseHeader.split(" ");
-            //int responseCode = Integer.parseInt(headerArray[1]);
-            //if (responseCode == 201) {
-
+            return true;
         } catch(Exception e) {
             System.out.print(e.toString());
-
-        } finally {
-
-         	if (transport != null) {
-	            transport.disconnect();
-	        }
-
         }
 
         return false;
@@ -207,6 +170,8 @@ public class Connection
 
     	} catch (Exception e) {
     		System.out.print(e.toString());
+    	} finally {
+    		closeExistingConnection();
     	}
 
 		return responseBody;
@@ -227,6 +192,8 @@ public class Connection
 
     	 } catch(Exception e) {
     		 System.out.print(e.toString());
+    	 } finally {
+    		 closeExistingConnection();
     	 }
 
     	 return responseXml;
